# ai_agents_tools

./: .env.example  .gitignore  Readme.md  conftest.py  main.py  pyproject.toml  pytest.ini  requirements.txt  run_tests.py  sample_input.txt  settings.py  setup.py
env/: pyvenv.cfg
llm/: __init__.py
nodes/: __init__.py  file_loader_tool.py  python_executor.py  text_to_markdown_tool.py  web_search.py
src/config/: models.yaml
src/config/tools/: summarizer.yaml
src/config/workflows/: basic_summary.yaml
src/core/: model_manager.py  tool_manager.py  workflow_orchestrator.py
src/models/: gemini_model.py  llama_model.py
src/tests/: test_basic_workflow.py  test_models.py
src/tools/: summarizer.py
src/workflows/: predefined_workflows.py  workflow_executor.py
tests/nodes/: test_file_loader.py  test_python_executor.py  test_text_to_markdown.py  test_web_search.py
workflows/: basic.py  web_search_workflow.py
