[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-agents-tools"
version = "0.1.0"
description = "AI Agents and Tools Project"
dependencies = [
    "langchain",
    "langchain-core",
    "openai",
    "python-dotenv",
    "pydantic",
    "langchain-openai",
    "tavily-python",
    "duckduckgo-search"
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "pytest-mock"
] 